fix: add z-index to background image for proper layering

--- a/css/header.css
+++ b/css/header.css
@@ -14,6 +14,7 @@
   width: 100vw;
   height: 80vw;
   background-size: cover;
+  z-index: -10;
 }
 
 .header-text-block {
